Added META tags to index.html

--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!doctype html>
 <html>
 	<head>
-		
-		<!--Character Set Meta -->
 		<meta charset="utf-8" />
-		
-		<!--Page Titel-->
-		<title></title>
-	
+		<meta name="description" content="Family Recipes" />
+		<meta name="keywords" content="recipes, otoole, leone, italian, irish, german" />
+		<meta name="robots" contents="index follow" />
+		<meta name="viewport" content="user-scalable=no, width=device-width" />
+		<meta name="viewport" content="target-densitydpi=device-dpi" />
+		<title>Our Family Recipe Book</title>	
 	</head>
 	<body>
+		<header>
+			<hdgroup>
+				<h1></h1>
+				<h2></h2>
+			</hdgroup>
+		</header>
 	
-		<!-- Page content lives here. -->
+	
 	
 	</body>
 </html>
