--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!doctype html>
+<!-- Kevin O'Toole -->
+<!-- VFW 1303 -->
+<!-- Project 1 -->
+
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="Family Recipes" />
+		<meta name="description" content="This is a compilation of the O'Toole and Leone family recipes." />
 		<meta name="keywords" content="recipes, otoole, leone, italian, irish, german" />
 		<meta name="robots" contents="index follow" />
 		<meta name="viewport" content="user-scalable=no, width=device-width" />
 		<meta name="viewport" content="target-densitydpi=device-dpi" />
+		<meta name="HandheldFriendly" content="True">
+		<meta name="MobileOptimezed" content="320"/>
 		<title>Our Family Recipe Book</title>	
 	</head>
 	<body>
 		<header>
 			<hdgroup>
-				<h1></h1>
-				<h2></h2>
+				<h1>O&#39;Toole &amp; Leone Family Recipes&#33;</h1>
 			</hdgroup>
 		</header>
-	
-	
-	
+		<p>A delicious compilation of recipes from the O&#39;Toole &amp; Leone family.</p>
+		<h2>Click to add your own recipe&#33;</h2>
+		<li><a href="additem.html">Submit Recipe</a></li>
 	</body>
 </html>
