Updated body content of index.html, Added form field and base fieldsets to additem.html.

--- a/additem.html
+++ b/additem.html
@@ -1,17 +1,40 @@
 <!doctype html>
+<!-- Kevin O'Toole -->
+<!-- VFW 1303 -->
+<!-- Project 1 -->
+
 <html>
 	<head>
-		
-		<!--Character Set Meta -->
 		<meta charset="utf-8" />
-		
-		<!--Page Titel-->
-		<title></title>
-	
+		<meta name="description" content="This is a compilation of the O'Toole and Leone family recipes." />
+		<meta name="keywords" content="recipes, otoole, leone, italian, irish, german" />
+		<meta name="robots" contents="index follow" />
+		<meta name="viewport" content="user-scalable=no, width=device-width" />
+		<meta name="viewport" content="target-densitydpi=device-dpi" />
+		<meta name="HandheldFriendly" content="True">
+		<meta name="MobileOptimezed" content="320"/>
+		<title>Add A Recipe</title>	
 	</head>
 	<body>
-	
-		<!-- Page content lives here. -->
-	
+		<header>
+			<hdgroup>
+				<h1>O&#39;Toole &amp; Leone Family Recipes&#33;</h1>
+				<h2>Add your own recipe to our family cookbook.</h2>
+			</hdgroup>
+		</header>
+		<form id="addRecipe" action="#" method="post">
+			<fieldset>
+				<legend>Your Information</legend>
+					<ul>
+						<li></li>
+					</ul>
+			</fieldset>
+			<fieldset>
+				<legend>Your Recipe</legend>
+					<ul>
+			
+					</ul>
+			</fieldset>
+		</form>
 	</body>
 </html>
