--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 	</head>
 	<body>
 		<header>
-			<hdgroup>
-				<h1>O&#39;Toole &amp; Leone Family Recipes&#33;</h1>
-			</hdgroup>
+			<h1>O&#39;Toole &amp; Leone Family Recipes&#33;</h1>
 		</header>
 		<p>A delicious compilation of recipes from the O&#39;Toole &amp; Leone family.</p>
 		<h2>Click to add your own recipe&#33;</h2>
-		<li><a href="additem.html">Submit Recipe</a></li>
+		<nav>
+			<li><a href="additem.html">Submit Recipe</a></li>
+		</nav>
 	</body>
 </html>
