--- a/additem.html
+++ b/additem.html
@@ -4,17 +4,20 @@
 <!-- Project 1 -->
 
 <html>
-	<head>
-		<meta charset="utf-8" />
+	<!-- Document Head inclues what charactores the site will use, short description, key words for search engines
+	information on how mobile devices will use the site, and page title-->
+	<head> 
+		<meta charset="utf-8" /> 
 		<meta name="description" content="This is a compilation of the O'Toole and Leone family recipes." />
 		<meta name="keywords" content="recipes, otoole, leone, italian, irish, german" />
-		<meta name="robots" contents="index follow" />
+		<meta name="robots" contents="index follow" /> 
 		<meta name="viewport" content="user-scalable=no, width=device-width" />
 		<meta name="viewport" content="target-densitydpi=device-dpi" />
 		<meta name="HandheldFriendly" content="True">
 		<meta name="MobileOptimezed" content="320"/>
-		<title>Add A Recipe</title>	
+		<title>Add A Recipe</title>
 	</head>
+	<!-- Document Body -->
 	<body>
 		<header>
 			<hdgroup>
@@ -22,7 +25,7 @@
 				<h2>Add your own recipe to our family cookbook&#46;</h2>
 			</hdgroup>
 		</header>
-		<form id="addRecipe" action="#" method="post">
+		<form id="addRecipe" action="#" method="post"> 
 			<fieldset>
 				<legend>Your Information</legend>
 					<ul>
