added comments to page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <!-- Project 1 -->
 
 <html>
+	<!-- Document Head inclues what charactores the site will use, short description, key words for search engines
+	information on how mobile devices will use the site, and page title-->
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="This is a compilation of the O'Toole and Leone family recipes." />
