Updated corrections from instructor

--- a/additem.html
+++ b/additem.html
@@ -55,11 +55,12 @@
 								<optgroup>
 							</select>
 						</li>
-						<li><label for="difficulty">Select the level of difficulty&#58;</label><br />
+						<li><label for="range">Select the level of difficulty&#58;</label><br />
 							<small>&#40;Easy&#41;</small><input type="range" min="1" max="10" name="range" id="range" /><small>&#40;Difficult&#41;</small>
 						</li>
-						<li>When do you make this&#63;</li>
-							<div><small>&#40;Check all that apply&#41;</small></div>
+						<li>When do you make this&#63;<br />
+							<small>&#40;Check all that apply&#41;</small>
+						</li>
 							<ul>
 								<li><input type="checkbox" value="Valentines" id="valentines" /><label for="valentines">Valentines</label></li>
 								<li><input type="checkbox" value="Easter" id="easter" /><label for="easter">Easter</label></li>
